--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <button id = 'button1'>
+            |||
+        </button>
+    </header>
+    <main id = 'main'>
+
+        <div id="modal"></div>
+
+
+        <button id="1">Button</button>
+        <button id="2">Button</button>
+        <button id="3">Button</button>
+        <button id="4">Button</button>
+
+        <div id="rectangle">rectangle</div>
+
+    </main>
 </body>
 <script src="tableaux.js"></script>
+<script src="css.js"></script>
 </html>
