--- a/formulaire/fromulaire.html
+++ b/formulaire/fromulaire.html
@@ -20,6 +20,8 @@
                 <input type="text" name="color2" id="color2" placeholder="2eme couleur preferée" required>
                 <input type="text" name="color3" id="color3" placeholder="3eme couleur preferée" required>
 
+                <p id="resultatCouleur"></p>
+
             </fieldset>
 
             <fieldset>
@@ -34,9 +36,11 @@
             </fieldset>
 
             <fieldset>
-                <legend>Met un nombre stp</legend>
+                <legend>Choisir un nombre</legend>
 
                 <input type="number" name="number" id="number">
+
+                <p id="noNumber"></p>
             </fieldset>
 
             <input type="submit" id="submit" value="Soumettre">
